--- a/cv.html
+++ b/cv.html
@@ -3,6 +3,6 @@ layout: default
 title: cv
 ---
 
-    <section>
-    	<object data="/tgw_cv.pdf", width = 100%, height= "1000"> </object>
+    <section class=page-container>
+    	<object data="/tgw_cv.pdf", width = 100%, height= "2000"> </object>
     </section>
