--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@ layout: default
 title: blog
 ---
 
-    <section class="page-section cta">
+    <section class="page-container ">
       <div class="container">
         <div class="row">
           <div class="col-xl-9 mx-auto">
