--- a/index.html
+++ b/index.html
@@ -6,18 +6,21 @@ title: index
       <div class="container">
         <div class="intro">
 
-          <div class="intro-text left-0 text-center bg-faded p-5 rounded">
-            <h2 class="section-heading mb-4">
+          <div class="intro-text left-0  bg-faded p-5 rounded">
+            <!-- <h2 class="section-heading mb-4">
               <span class="section-heading-upper">Fresh Coffee</span>
               <span class="section-heading-lower">Worth Drinking</span>
-            </h2>
-            <p class="mb-3">Every cup of our quality artisan coffee starts with locally sourced, hand picked ingredients. Once you try it, our coffee will be a blissful addition to your everyday morning routine - we guarantee it!
+            </h2> -->
+            <p class="mb-3">I’m a PhD pre-candidate in the Department of Industrial and Operations Engineering at the University of Michigan.
+              I’m a part of the Guikema research group, and my research can be broadly split into two categories: <br> <br>
+                - Modeling human decision-making with regard to food-energy-water issues; and <br>
+                - Developing quantitative methods for categorizing urban form.
             </p>
             <!-- <div class="intro-button mx-auto">
               <a class="btn btn-primary btn-xl" href="#">Visit Us Today!</a>
             </div> -->
           </div>
-          <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="img/intro.jpg" alt="">
+          <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="assets/img/tim_wide.jpg" alt="">
         </div>
       </div>
     </section>
