updating blogging display and adding comment functionality

--- a/_posts/2016-02-08-styles.html
+++ b/_posts/2016-02-08-styles.html
@@ -3,6 +3,7 @@ layout: post
 title:  "Styles from Strata"
 categories: styles
 excerpt: This post demostrates the various styles that are available for use from the Strata template
+comments: true
 ---
 <!-- One -->
 	<section id="one">
