changing the position and widths of text and img on front page

--- a/index.html
+++ b/index.html
@@ -6,17 +6,31 @@ title: index
 <section class="page-section clearfix">
   <div class="container">
     <div class="intro">
-      <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="img/intro.jpg" alt="">
-      <div class="intro-text left-0 text-center bg-faded p-5 rounded">
+      <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="img/tim_1500x1000.jpg" alt="">
+      <div class="intro-text left-0 bg-faded p-5 rounded">
         <h2 class="section-heading mb-4">
-          <span class="section-heading-upper">Fresh Coffee</span>
-          <span class="section-heading-lower">Worth Drinking</span>
+          <span class="section-heading-upper">
+            Tim Williams <br>
+          </span>
+          <span class="section-subheading-upper">
+            PhD Pre-Candidate <br>
+            Industrial & Operations Engineering
+          </span>
         </h2>
-        <p class="mb-3">Every cup of our quality artisan coffee starts with locally sourced, hand picked ingredients. Once you try it, our coffee will be a blissful addition to your everyday morning routine - we guarantee it!
+        <p class="mb-3">
+          I’m a PhD pre-candidate in the Department of Industrial and Operations Engineering at the University of Michigan.
+          I’m a part of the Guikema research group, and my research can be broadly split into two categories:
+          <ul>
+            <li>Modeling human decision-making with regard to food-energy-water issues; and</li>
+            <li>Developing quantitative methods for categorizing urban form.</li>
+          </ul>
+          I’ve recently moved to the USA from New Zealand, where I studied Natural Resources Engineering at the University of Canterbury.
+          My long-term goals are to advance the understanding of how coupled human-natural systems function, and how we can transition these systems in a way that promotes both the betterment of society and the prosperity of the environment.
         </p>
-        <div class="intro-button mx-auto">
-          <a class="btn btn-primary btn-xl" href="#">Visit Us Today!</a>
-        </div>
+        <p>
+          You can also visit the <a href="http://adaptingcities.org" target="_blank">Adapting Cities</a> website.
+        </p>
+
       </div>
     </div>
   </div>
