adding research project

--- a/research.html
+++ b/research.html
@@ -9,21 +9,32 @@ title: research
           <div class="product-item-title d-flex">
             <div class="bg-faded p-5 d-flex ml-auto rounded">
               <h2 class="section-heading mb-0">
-                <span class="section-heading-upper">Blended to Perfection</span>
-                <span class="section-heading-lower">Coffees &amp; Teas</span>
+                <span class="section-heading-lower">Measuring Urban Accessibility</span>
+                <span class="section-heading-upper">An accurate and scalable approach</span>
               </h2>
             </div>
           </div>
-          <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/products-01.jpg" alt="">
+          <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/city-access.jpeg" alt="">
           <div class="product-item-description d-flex mr-auto">
             <div class="bg-faded p-5 rounded">
-              <p class="mb-0">We take pride in our work, and it shows. Every time you order a beverage from us, we guarantee that it will be an experience worth having. Whether it's our world famous Venezuelan Cappuccino, a refreshing iced herbal tea, or something as simple as a cup of speciality sourced black coffee, you will be coming back for more.</p>
+              <p>
+                Accessibility (to healthcare, green spaces, schools, shopping areas and other points of interest) is an important indicator of both the livability
+                and sustainability of a city. 
+                For this project we have developed an approach that utilizes readily-available public data to quantify urban accessibility.
+              </p>
+              <p>
+                Our approach measures proximity at the parcel level, is independent of subjectively-defined "access thresholds", and is easily scalable.
+                We apply this tool to multiple US cities to compare accessibility to a range of core urban services.
+                Results can be used by city councils and planning agencies to inform the prioritization of infrastructure developments.
+
+                For more information, visit the Adapting Cities website.
+              </p>
             </div>
           </div>
         </div>
       </div>
     </section>
-
+<!--
     <section class="page-section">
       <div class="container">
         <div class="product-item">
@@ -64,4 +75,4 @@ title: research
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
