added second project, updated cv, added CNAME

--- a/blog.html
+++ b/blog.html
@@ -6,9 +6,12 @@ text_align: text-center
 
 
 <ul class="list-unstyled list-hours mb-5 text-left mx-auto">
-  {% for post in site.posts %}
+  <p>
+    <center> "Reckoning Risk" blog site: coming soon </center>
+  </p>
+  <!-- {% for post in site.posts %}
   <li class="list-unstyled-item list-hours-item d-flex">
    {{ post.date | date: "%Y/%m/%d" }} <span class="ml-auto"><a href="{{ post.url }}">{{ post.title }}</a></span>
   </li>
-  {% endfor %}
+  {% endfor %} -->
 </ul>
