--- a/research.html
+++ b/research.html
@@ -18,22 +18,46 @@ title: research
           <div class="product-item-description d-flex mr-auto">
             <div class="bg-faded p-5 rounded">
               <p>
-                Accessibility (to healthcare, green spaces, schools, shopping areas and other points of interest) is an important indicator of both the livability
-                and sustainability of a city. 
-                For this project we have developed an approach that utilizes readily-available public data to quantify urban accessibility.
+                Accessibility is an important indicator of both the livability and sustainability of a city. 
+                For this project we have developed an approach for quantifying urban accessibility (to healthcare, green spaces, schools, supermarkets and other points of interest).
+                Our approach measures proximity at the parcel level and does not depend on any subjectively-defined "access thresholds".
+                By utilizing readily-available public data and open-source routing algorithms, our approach is also readily scalable.
               </p>
               <p>
-                Our approach measures proximity at the parcel level, is independent of subjectively-defined "access thresholds", and is easily scalable.
-                We apply this tool to multiple US cities to compare accessibility to a range of core urban services.
-                Results can be used by city councils and planning agencies to inform the prioritization of infrastructure developments.
-
-                For more information, visit the Adapting Cities website.
+                For more information, read <a href= 'http://adaptingcities.org/city_access.html'> our short article on the Adapting Cities website </a>.
               </p>
             </div>
           </div>
         </div>
       </div>
     </section>
+
+    <section class="page-section">
+      <div class="container">
+        <div class="product-item">
+          <div class="product-item-title d-flex">
+            <div class="bg-faded p-5 d-flex ml-auto rounded">
+              <h2 class="section-heading mb-0">
+                <span class="section-heading-lower">Food Security in Ethiopia</span>
+                <span class="section-heading-upper">A household-level model</span>
+              </h2>
+            </div>
+          </div>
+          <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/grain.jpg" alt="">
+          <div class="product-item-description d-flex mr-auto">
+            <div class="bg-faded p-5 rounded">
+              <p>
+                This project involves the development of an agent-based model (ABM) to explore issues of rural poverty and development in Ethiopia.
+                The ABM will model the decision-making process of individual households, allowing us to explore household-level food security and wealth
+                under a variety of scenarios.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+
 <!--
     <section class="page-section">
       <div class="container">
