--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@ title: index
         <p>
           You can also visit the <a href="http://adaptingcities.org" target="_blank">Adapting Cities</a> website.
         </p>
+        <span class="section-heading-upper">
+          Github contributions
+        </span>
+        <img src="http://ghchart.rshah.org/t-g-williams" alt="Tim's Github chart" />
 
       </div>
     </div>
