updating github heading

--- a/index.html
+++ b/index.html
@@ -30,11 +30,14 @@ title: index
         <p>
           You can also visit the <a href="http://adaptingcities.org" target="_blank">Adapting Cities</a> website.
         </p>
-        <span class="section-heading-upper">
-          Github contributions
-        </span>
-        <img src="http://ghchart.rshah.org/t-g-williams" alt="Tim's Github chart" />
-
+        <h2 class="section-heading mb-4">
+          <span class="section-heading-upper">
+            Github contributions
+          </span>
+        </h2>
+        <p>
+          <img src="http://ghchart.rshah.org/409ba5/t-g-williams" alt="Tim's Github chart" />
+        </p>
       </div>
     </div>
   </div>
