--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ title: index
           </span>
         </h2>
         <p>
-          <img src="http://ghchart.rshah.org/409ba5/t-g-williams" alt="Tim's Github chart" />
+          <img src="http://ghchart.rshah.org/409ba5/t-g-williams" alt="Tim's Github chart" width="100%"/>
         </p>
       </div>
     </div>
