added link to reckoning risk

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ title: index
           My long-term goals are to advance the understanding of how coupled human-natural systems function, and how we can transition these systems in a way that promotes both the betterment of society and the prosperity of the environment.
         </p>
         <p>
-          You can also visit the <a href="http://adaptingcities.org" target="_blank">Adapting Cities</a> website.
+          You can also visit my shared blog <a href="http://reckoningrisk.com" target="_blank">Reckoning Risk</a> and the <a href="http://adaptingcities.org" target="_blank">Adapting Cities</a> website.
         </p>
         <h2 class="section-heading mb-4">
           <span class="section-heading-upper">
