added city access paper to research page

--- a/research.html
+++ b/research.html
@@ -24,7 +24,8 @@ title: research
                 By utilizing readily-available public data and open-source routing algorithms, our approach is also readily scalable.
               </p>
               <p>
-                For more information, read <a href= 'http://adaptingcities.org/city_access.html'> our short article on the Adapting Cities website </a>.
+                For more information, read <a href= 'http://adaptingcities.org/city_access.html'> our short article on the Adapting Cities website </a>
+                and see our published paper <a href= 'https://journals.sagepub.com/doi/abs/10.1177/2399808317736528'>here</a>.
               </p>
             </div>
           </div>
