removing research tab, updating description on main page, changing link to blog

--- a/blog.html
+++ b/blog.html
@@ -1,13 +1,15 @@
 ---
 layout: post
-title: blogs
+title: blog
 text_align: text-center
 ---
 
 
 <ul class="list-unstyled list-hours mb-5 text-left mx-auto">
   <p>
-    <center> "Reckoning Risk" blog site: coming soon </center>
+    <center>
+      <a href="https://reckoningrisk.com/" target="_blank">Visit my shared blog: Reckoning Risk</a>
+     </center>
   </p>
   <!-- {% for post in site.posts %}
   <li class="list-unstyled-item list-hours-item d-flex">
