--- a/index.html
+++ b/index.html
@@ -13,31 +13,28 @@ title: index
             Tim Williams <br>
           </span>
           <span class="section-subheading-upper">
-            PhD Pre-Candidate <br>
-            Industrial & Operations Engineering
+            PhD Candidate <br>
+            Industrial & Operations Engineering <br>
+            University of Michigan
           </span>
         </h2>
         <p class="mb-3">
-          I’m a PhD pre-candidate in the Department of Industrial and Operations Engineering at the University of Michigan.
-          I’m a part of the Guikema research group, and my research can be broadly split into two categories:
-          <ul>
-            <li>Modeling human decision-making with regard to food-energy-water issues; and</li>
-            <li>Developing quantitative methods for categorizing urban form.</li>
-          </ul>
-          I’ve recently moved to the USA from New Zealand, where I studied Natural Resources Engineering at the University of Canterbury.
-          My long-term goals are to advance the understanding of how coupled human-natural systems function, and how we can transition these systems in a way that promotes both the betterment of society and the prosperity of the environment.
+          I explore risk and resilience in agricultural systems using quantitative methods.
+          <br>
+          My underlying motivation is to enhance understanding of how we can encourage socio-environmental systems
+          to develop and transform in a way that promotes both the betterment of society and the prosperity of the environment.
+          <br>
+          To achieve this, I seek to better understand observed historical relationships (using empirical analysis and data mining)
+          and how systems may behave in the future or under intervention (using agent-based modeling).
         </p>
-        <p>
-          You can also visit my shared blog <a href="http://reckoningrisk.com" target="_blank">Reckoning Risk</a> and the <a href="http://adaptingcities.org" target="_blank">Adapting Cities</a> website.
-        </p>
-        <h2 class="section-heading mb-4">
+        <!-- <h2 class="section-heading mb-4">
           <span class="section-heading-upper">
             Github contributions
           </span>
         </h2>
         <p>
           <img src="http://ghchart.rshah.org/409ba5/t-g-williams" alt="Tim's Github chart" width="100%"/>
-        </p>
+        </p> -->
       </div>
     </div>
   </div>
