--- a/about.html
+++ b/about.html
@@ -1,4 +1,4 @@
----
+<!-- ---
 layout: default
 ---
 
@@ -20,4 +20,4 @@ layout: default
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
