--- a/cv.html
+++ b/cv.html
@@ -4,5 +4,5 @@ title: cv
 ---
 
     <section class=page-container>
-    	<object data="/cv_january_2019.pdf", width = 100%, height= "2000"> </object>
+    	<object data="/cv_february_2019.pdf", width = 100%, height= "2000"> </object>
     </section>
