updating photo and description

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: index
 <section class="page-section clearfix">
   <div class="container">
     <div class="intro">
-      <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="img/tim_1500x1000.jpg" alt="">
+      <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="img/photo.jpg" alt="">
       <div class="intro-text left-0 bg-faded p-5 rounded">
         <h2 class="section-heading mb-4">
           <span class="section-heading-upper">
@@ -19,15 +19,16 @@ title: index
           </span>
         </h2>
         <p class="mb-3">
-          I explore risk and resilience in agricultural systems using quantitative methods.
+          I model risk and resilience in smallholder agricultural systems.
           <br>
           <br>
-          My underlying motivation is to enhance understanding of how we can encourage socio-environmental systems
+          My underlying motivation is to encourage agricultural systems
           to develop and transform in a way that promotes both the betterment of society and the prosperity of the environment.
           <br>
           <br>
-          To achieve this, I seek to better understand observed historical relationships (using empirical analysis and data mining)
-          and how systems may behave in the future or under intervention (using agent-based modeling).
+          To achieve this, I use both agent-based modeling to examine how systems may behave in the future or under intervention
+          and empirical analysis and data mining to better understand observed historical relationships.
+          I am broadly interested in the intersection of these two forms of analysis.
         </p>
         <!-- <h2 class="section-heading mb-4">
           <span class="section-heading-upper">
