--- a/private/papers.html
+++ b/private/papers.html
@@ -8,17 +8,24 @@ text_align: text-center
 <ul class="list-unstyled list-hours mb-5 text-left mx-auto">
   <p>
     <center>
-      Assessing model equifinality
-
+      Assessing model equifinality:
+    <center>
+  <p>
+    <p>
+      <center>
       <a href="https://drive.google.com/file/d/15N83w7cBTGhqC84NdhAPUT1U1djaT-w2/view?usp=sharing" target="_blank">Main body</a>
-      <a href="https://drive.google.com/file/d/1vFSLW8qa6aPUf6meXc1P_t87qbAWpuAz/view?usp=sharing" target="_blank">Supplemental: pseudocode</a>
+      ,
+      <a href="https://drive.google.com/file/d/1vFSLW8qa6aPUf6meXc1P_t87qbAWpuAz/view?usp=sharing" target="_blank">Supplemental pseudocode</a>
      </center>
   </p>
 
   <p>
     <center>
-      Ecological and financial insurance
-
+      Ecological and financial insurance:
+    </center>
+ </p>
+ <p>
+   <center>
       <a href="https://drive.google.com/open?id=16HmheK-89E5sm8yb9dMoltSh_B_uO7t4" target="_blank">Main body</a>
      </center>
   </p>
