--- a/cv.html
+++ b/cv.html
@@ -4,5 +4,5 @@ title: cv
 ---
 
     <section class=page-container>
-    	<object data="/cv_june_2020.pdf", width = 80%, height= "2000"> </object>
+    	<object data="/cv_september_2020.pdf", width = 80%, height= "2000"> </object>
     </section>
