updated new link to EAGA paper

--- a/private/papers.html
+++ b/private/papers.html
@@ -13,9 +13,7 @@ text_align: text-center
   <p>
     <p>
       <center>
-      <a href="https://drive.google.com/file/d/15N83w7cBTGhqC84NdhAPUT1U1djaT-w2/view?usp=sharing" target="_blank">Main body</a>
-      ,
-      <a href="https://drive.google.com/file/d/1vFSLW8qa6aPUf6meXc1P_t87qbAWpuAz/view?usp=sharing" target="_blank">Supplemental pseudocode</a>
+      <a href="http://dx.doi.org/10.1016/j.envsoft.2020.104831" target="_blank">This paper has been accepted into Environmental Modelling & Software</a>
      </center>
   </p>
 
