new photo and updated description

--- a/index.html
+++ b/index.html
@@ -6,20 +6,20 @@ title: index
 <section class="page-section clearfix">
   <div class="container">
     <div class="intro">
-      <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="img/photo.jpg" alt="">
+      <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="img/professional photo - tim.jpg" alt="">
       <div class="intro-text left-0 bg-faded p-5 rounded">
         <h2 class="section-heading mb-4">
           <span class="section-heading-upper">
             Tim Williams <br>
           </span>
           <span class="section-subheading-upper">
-            PhD Candidate <br>
+            PhD <br>
             Industrial & Operations Engineering <br>
             University of Michigan
           </span>
         </h2>
         <p class="mb-3">
-          I model risk and resilience in smallholder agricultural systems.
+          I model risk and resilience in agricultural systems.
           <br>
           <br>
           My underlying motivation is to encourage agricultural systems
@@ -29,6 +29,10 @@ title: index
           To achieve this, I use both agent-based modeling to examine how systems may behave in the future or under intervention
           and empirical analysis and data mining to better understand observed historical relationships.
           I am broadly interested in the intersection of these two forms of analysis.
+          <br>
+          <br>
+          In August 2021 I moved to Vrije University in Amsterdam to start a post-doc,
+          which will focus on modeling transformation in European agricultural systems.
         </p>
         <!-- <h2 class="section-heading mb-4">
           <span class="section-heading-upper">
