--- a/index.html
+++ b/index.html
@@ -46,3 +46,25 @@ title: index
     </div>
   </div>
 </section>
+
+
+    <footer class="footer text-faded text-center py-5">
+      <div class="container">
+        <ul class="icons horizontal-list">
+          <li><a href="https://twitter.com/TimWilliamsNZ" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+          <!-- <li><a href="https://www.linkedin.com/in/" class="icon fa-linkedin"><span class="label">Facebook</span></a></li> -->
+          <li><a href="https://scholar.google.co.nz/citations?hl=en&user=t9WLfKQAAAAJ&hl" class="icon fa-graduation-cap"><span class="label"> Google Scholar</span></a></li>
+          <li><a href="https://github.com/t-g-williams" class="icon fa-github"><span class="label">Github</span></a></li>
+          <li><a href="mailto:tgw@umich.edu" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+        </ul>
+      </div>
+    </footer>
+
+    <!-- Bootstrap core JavaScript -->
+    <!-- <script src="/vendor/jquery/jquery.min.js"></script> -->
+    <!-- <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script> -->
+
+
+  <!-- </body> -->
+
+<!-- </html> -->
