--- a/blog.html
+++ b/blog.html
@@ -11,9 +11,9 @@ text_align: text-center
       <a href="https://reckoningrisk.com/" target="_blank">Visit my shared blog: Reckoning Risk</a>
      </center>
   </p>
-  <!-- {% for post in site.posts %}
+  {% for post in site.posts %}
   <li class="list-unstyled-item list-hours-item d-flex">
    {{ post.date | date: "%Y/%m/%d" }} <span class="ml-auto"><a href="{{ post.url }}">{{ post.title }}</a></span>
   </li>
-  {% endfor %} -->
+  {% endfor %}
 </ul>
