--- a/blog.html
+++ b/blog.html
@@ -8,7 +8,7 @@ text_align: text-center
 <ul class="list-unstyled list-hours mb-5 text-left mx-auto">
   <p>
     <center>
-      <a href="https://reckoningrisk.com/" target="_blank">Visit my shared blog: Reckoning Risk</a>
+      Visit my shared blog: <a href="https://reckoningrisk.com/" target="_blank">Reckoning Risk</a>
      </center>
   </p>
   {% for post in site.posts %}
