--- a/index.html
+++ b/index.html
@@ -10,29 +10,31 @@ title: index
       <div class="intro-text left-0 bg-faded p-5 rounded">
         <h2 class="section-heading mb-4">
           <span class="section-heading-upper">
-            Tim Williams <br>
+            Tim G. Williams <br>
           </span>
           <span class="section-subheading-upper">
             PhD <br>
-            Industrial & Operations Engineering <br>
-            University of Michigan
           </span>
         </h2>
         <p class="mb-3">
-          I model risk and resilience in agricultural systems.
+          I model resilience in agricultural systems.
           <br>
           <br>
-          My underlying motivation is to encourage agricultural systems
-          to develop and transform in a way that promotes both the betterment of society and the prosperity of the environment.
+          My goal as a researcher is to improve understanding of how agricultural systems can
+          transition to become more sustainable (both socially and environmentally) in the face of global change.
           <br>
           <br>
-          To achieve this, I use both agent-based modeling to examine how systems may behave in the future or under intervention
-          and empirical analysis and data mining to better understand observed historical relationships.
-          I am broadly interested in the intersection of these two forms of analysis.
+          I am a postdoctoral researcher in the Environmental Geography Group at Vrije Universiteit in Amsterdam.
+          My research here focuses on modelling transformation in European agriculture.
           <br>
           <br>
-          In August 2021 I moved to Vrije University in Amsterdam to start a post-doc,
-          which will focus on modeling transformation in European agricultural systems.
+          In August 2021, I graduated with a PhD in Industrial & Operations Engineering from the University of Michigan.
+          In my dissertation I used agent-based modelling to examine strategies for building resilience in smallholder agricultural systems.
+          My postdoctoral research builds on this prior experience by transitioning to a European context and a larger scale of modelling.
+          <br>
+          <br>
+          Please use the links below to view my Twitter, Google Scholar, and Github accounts.
+          I also (very) occasionally make blog posts on this site. You can see these under the "Blog" link in the site's header.
         </p>
         <!-- <h2 class="section-heading mb-4">
           <span class="section-heading-upper">
