--- a/bias-template.html
+++ b/bias-template.html
@@ -3,11 +3,32 @@ layout: default
 title: bias
 ---
 <div class="container">
-    <div class="intro">
+    <div class="about-heading-content">
+      <div class="row">
+        <div class="col-xl-9 col-lg-10 mx-auto">
+          <div class="bg-faded rounded p-5">
+            <h2 class="section-heading mb-4">
+              <span class="section-heading-upper">Positionality and Bias Reflections</span>
+            </h2>
+            <p> <a href="/assets/positionality and bias template.docx">Click here to download the Microsoft Word template</a> </p>
+
+            <p>Founded in 1987 by the Hernandez brothers, our establishment has been serving up rich coffee sourced from artisan farmers in various regions of South and Central America. We are dedicated to travelling the world, finding the best coffee, and bringing back to you here in our cafe.</p>
+            <p class="mb-0">We guarantee that you will fall in <em>lust</em> with our decadent blends the moment you walk inside until you finish your last sip. Join us for your daily routine, an outing with friends, or simply just to enjoy some alone time.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+</div>
+
+
+<!--     <div class="intro">
         Test text here
+
+         [Click here to download the Microsoft Word template](/assets/positionality and bias template.docx)
     </div>
 </div>
 
 <section class=page-container>
-	<object data="/positionality and bias template.docx", width = 80%, height= "2000"> </object>
+	<object data="", width = 80%, height= "2000"> </object>
 </section>
+ -->
