--- a/bias-template.html
+++ b/bias-template.html
@@ -12,8 +12,15 @@ title: bias
             </h2>
             <p> <a href="/assets/positionality and bias template.docx">Click here to download the Microsoft Word template</a> </p>
 
-            <p>Founded in 1987 by the Hernandez brothers, our establishment has been serving up rich coffee sourced from artisan farmers in various regions of South and Central America. We are dedicated to travelling the world, finding the best coffee, and bringing back to you here in our cafe.</p>
-            <p class="mb-0">We guarantee that you will fall in <em>lust</em> with our decadent blends the moment you walk inside until you finish your last sip. Join us for your daily routine, an outing with friends, or simply just to enjoy some alone time.</p>
+            <p> <b>1. Positionality</b> </p>
+            <ul>
+                <li>What are the <b>backgrounds and identities</b> of the researchers? (e.g., race, ethnicity, class, gender, education, upbringing, political beliefs, hierarchical position)</li>
+                <li>How might these identities have influenced how the researchers <b>approach research</b>? (e.g., worldview, epistemology, objectives)</li>
+                <li><b>How do these identities relate</b> to the participants and/or context of the research? (e.g., in what ways are the researchers insiders or outsiders? Are there power imbalances?)</li>
+            </ul>                
+
+
+
           </div>
         </div>
       </div>
