--- a/bias-template.html
+++ b/bias-template.html
@@ -10,32 +10,28 @@ title: bias
             <h2 class="section-heading mb-4">
               <span class="section-heading-upper">Positionality and Bias Reflections</span>
             </h2>
-            <p> <a href="/assets/positionality and bias template.docx">Click here to download the Microsoft Word template</a> </p>
+            <p> <a href="/assets/positionality and bias template.docx">Click here to download a Microsoft Word template</a> </p>
 
             <p> <b>1. Positionality</b> </p>
             <ul>
                 <li>What are the <b>backgrounds and identities</b> of the researchers? (e.g., race, ethnicity, class, gender, education, upbringing, political beliefs, hierarchical position)</li>
                 <li>How might these identities have influenced how the researchers <b>approach research</b>? (e.g., worldview, epistemology, objectives)</li>
                 <li><b>How do these identities relate</b> to the participants and/or context of the research? (e.g., in what ways are the researchers insiders or outsiders? Are there power imbalances?)</li>
+            </ul>  
+
+            <p> <b>2. Framing</b> </p>
+            <ul>
+                <li>What <b>narratives</b> underlie the formulation of the problem or research questions? What kinds of <b>solutions</b> do these narratives invite? What are the principal entities and <b>actors</b> in these narratives? Were they included in helping frame the problem?</li>
+                <li>What might be <b>missing</b> from this framing? Which groups might be <b>(dis)advantaged</b> by this framing? <b>Who has decided</b> about this framing?</li>
             </ul>                
 
 
-
+            <p> <b>3. Action items</b> </p>
+            <ul>
+                <li>What is one <b>concrete action</b> the researchers could take to mitigate any potential problems?</li>
+            </ul>                
           </div>
         </div>
       </div>
     </div>
 </div>
-
-
-<!--     <div class="intro">
-        Test text here
-
-         [Click here to download the Microsoft Word template](/assets/positionality and bias template.docx)
-    </div>
-</div>
-
-<section class=page-container>
-	<object data="", width = 80%, height= "2000"> </object>
-</section>
- -->
