--- a/index.html
+++ b/index.html
@@ -17,20 +17,28 @@ title: index
           </span>
         </h2>
         <p class="mb-3">
-          I model resilience in agricultural systems.
+          I model resilience and transformation in agri-food systems.
           <br>
           <br>
-          My goal as a researcher is to improve understanding of how agricultural systems can
-          transition to become more sustainable (both socially and environmentally) in the face of global change.
+          I am an interdisciplinarian -- an engineer turned geographer -- with expertise in agent-based modelling, spatial analysis,
+          and qualitative content analysis.
           <br>
           <br>
-          I am a postdoctoral researcher in the Environmental Geography Group at Vrije Universiteit in Amsterdam.
-          My research here focuses on modelling transformation in European agriculture.
+          My main research interest is in understanding how agricultural and food systems can transition to become
+          more sustainable and equitable in the face of global change.
+          I study the social relations between actors in agri-food systems, and the mechanisms through which they can
+          reconfigure in a sustainability transition.
+          Equity is a key theme underpinning my research, and a goal that I aspire towards in my scientific practice.
+          <br>
+          <br>
+          I am currently a postdoctoral researcher in the Environmental Geography Group at Vrije Universiteit in Amsterdam.
+          My research here focuses on understanding the networks of actors that impact European agriculture, 
+          and the power relations embedded in their interactions.
           <br>
           <br>
           In August 2021, I graduated with a PhD in Industrial & Operations Engineering from the University of Michigan.
           In my dissertation I used agent-based modelling to examine strategies for building resilience in smallholder agricultural systems.
-          My postdoctoral research builds on this prior experience by transitioning to a European context and a larger scale of modelling.
+          My postdoctoral research builds on this prior experience by transitioning to a European context and a larger scale of analysis.
           <br>
           <br>
           Please use the links below to view my Twitter, Google Scholar, and Github accounts.
