adding climate farmers job and removing cv

--- a/index.html
+++ b/index.html
@@ -20,23 +20,24 @@ title: index
           I model resilience and transformation in agri-food systems.
           <br>
           <br>
-          I am an interdisciplinarian -- an engineer turned geographer -- with expertise in agent-based modelling, spatial analysis,
-          and qualitative content analysis.
-          <br>
-          <br>
-          My main research interest is in understanding how agricultural and food systems can transition to become
+          I am an interdisciplinarian -- an engineer turned geographer -- with expertise in using various quantitative and 
+          qualitative methods to examine sustainability in agriculture.
+          I am interested in exploring how agricultural and food systems can transition to become
           more sustainable and equitable in the face of global change.
-          I study the social relations between actors in agri-food systems, and the mechanisms through which they can
-          reconfigure in a sustainability transition.
-          Equity is a key theme underpinning my research, and a goal that I aspire towards in my scientific practice.
           <br>
           <br>
-          I am currently a postdoctoral researcher in the Environmental Geography Group at Vrije Universiteit in Amsterdam.
-          My research here focuses on understanding the networks of actors that impact European agriculture, 
+          I am currently working at <a href="https://www.climatefarmers.org/">Climate Farmers</a>
+          as an Environmental Modeller & Researcher. 
+          I am part of the Science team, where we design and improve methodologies for measuring regeneration
+          in European farms.
+          <br>
+          <br>
+          From August 2021 to February 2024 I worked as a postdoctoral researcher in the Environmental Geography Group at Vrije Universiteit in Amsterdam.
+          My research focused on understanding the networks of actors that impact European agriculture, 
           and the power relations embedded in their interactions.
           <br>
           <br>
-          In August 2021, I graduated with a PhD in Industrial & Operations Engineering from the University of Michigan.
+          In 2021, I graduated with a PhD in Industrial & Operations Engineering from the University of Michigan.
           In my dissertation I used agent-based modelling to examine strategies for building resilience in smallholder agricultural systems.
           My postdoctoral research builds on this prior experience by transitioning to a European context and a larger scale of analysis.
           <br>
