--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@ title: index
           I model resilience and transformation in agri-food systems.
           <br>
           <br>
-          I am an interdisciplinarian -- an engineer turned geographer -- with expertise in using various quantitative and 
+          I am an interdisciplinary researcher with experience using various quantitative and 
           qualitative methods to examine sustainability in agriculture.
-          I am interested in exploring how agricultural and food systems can transition to become
+          I am interested in exploring how food systems can transition to become
           more sustainable and equitable in the face of global change.
           <br>
           <br>
-          I am currently working at <a href="https://www.climatefarmers.org/">Climate Farmers</a>
-          as an Environmental Modeller & Researcher. 
-          I am part of the Science team, where we design and improve methodologies for measuring regeneration
-          in European farms.
+          From March 2024 to January 2025 I worked as an Environmental Modeller & Researcher
+          at <a href="https://www.climatefarmers.org/">Climate Farmers</a>. 
+          As part of the Science team, I developed methodologies for quantifying carbon sequestration
+          in regenerative farms.
           <br>
           <br>
           From August 2021 to February 2024 I worked as a postdoctoral researcher in the Environmental Geography Group at Vrije Universiteit in Amsterdam.
@@ -42,7 +42,7 @@ title: index
           My postdoctoral research builds on this prior experience by transitioning to a European context and a larger scale of analysis.
           <br>
           <br>
-          Please use the links below to view my Twitter, Google Scholar, and Github accounts.
+          Please use the links below to view my Twitter, Linked In, Google Scholar, and Github accounts.
           I also (very) occasionally make blog posts on this site. You can see these under the "Blog" link in the site's header.
         </p>
         <!-- <h2 class="section-heading mb-4">
