updated main page

--- a/index.html
+++ b/index.html
@@ -21,11 +21,16 @@ title: index
           <br>
           <br>
           I am an interdisciplinary researcher with experience using various quantitative and 
-          qualitative methods to examine sustainability in agriculture.
-          I am interested in exploring how food systems can transition to become
+          qualitative methods to examine hmuan-environment interactions in agricultural and food systems.
+          I am interested in exploring how these systems can transition to become
           more sustainable and equitable in the face of global change.
           <br>
           <br>
+          Since March 2025 I have been employed as a Senior Scientist at Universität Hohenheim. 
+          My work focuses on modelling the joint impacts of transitions to organic agriculture
+          on ecological and economic outcomes.
+          <br>
+          <br>           
           From March 2024 to January 2025 I worked as an Environmental Modeller & Researcher
           at <a href="https://www.climatefarmers.org/">Climate Farmers</a>. 
           As part of the Science team, I developed methodologies for quantifying carbon sequestration
